c/peptalk/peptalk.output
State 1 conflicts: 7 reduce/reduce
State 2 conflicts: 7 reduce/reduce
State 30 conflicts: 7 shift/reduce
State 34 conflicts: 10 reduce/reduce
State 41 conflicts: 7 shift/reduce


Grammar

    0 $accept: list $end

    1 list: list item
    2     | item

    3 item: keyval
    4     | keygroup
    5     | EOL
    6     | SPACE
    7     | declaration
    8     | error

    9 keyval: blob ':' blob

   10 $@1: /* empty */

   11 keygroup: blob OPENKEY $@1 keylist CLOSEKEY

   12 keylist: keylist keylist_item
   13        | keylist_item

   14 keylist_item: preedit
   15             | keyval
   16             | keygroup
   17             | EOL
   18             | error
   19             | blob

   20 $@2: /* empty */

   21 $@3: /* empty */

   22 preedit: blob $@2 THEN blob $@3 EOL

   23 $@4: /* empty */

   24 $@5: /* empty */

   25 declaration: DTEXT optionalcolon optionalweight TYPE $@4 numlist $@5 EOL

   26 $@6: /* empty */

   27 declaration: DTEXT optionalcolon optionalweight TYPE $@6 EOL

   28 $@7: /* empty */

   29 $@8: /* empty */

   30 declaration: DTEXT optionalcolon optionalweight $@7 numlist $@8 EOL

   31 optionalcolon: ':'
   32              | optionalcolon SPACE
   33              | /* empty */

   34 optionalweight: WEIGHT
   35               | /* empty */

   36 numlist: num_item
   37        | numlist ',' num_item
   38        | numlist SPACE

   39 num_item: NUMBER '-' NUMBER
   40         | NUMBER
   41         | DTEXT
   42         | '*'
   43         | '$' NUMBER
   44         | error

   45 blob: blob blob_elmt
   46     | blob_elmt
   47     | error

   48 blob_elmt: TEXT
   49          | NUMBER
   50          | ','
   51          | '*'
   52          | '-'
   53          | '$'
   54          | SPACE


Terminals, with rules where they appear

$end (0) 0
'$' (36) 43 53
'*' (42) 42 51
',' (44) 37 50
'-' (45) 39 52
':' (58) 9 31
error (256) 8 18 44 47
SPACE (258) 6 32 38 54
NUMBER (259) 39 40 43 49
DTEXT (260) 25 27 30 41
THEN (261) 22
EOL (262) 5 17 22 25 27 30
TEXT (263) 48
OPENKEY (264) 11
CLOSEKEY (265) 11
TYPE (266) 25 27
WEIGHT (267) 34


Nonterminals, with rules where they appear

$accept (18)
    on left: 0
list (19)
    on left: 1 2, on right: 0 1
item (20)
    on left: 3 4 5 6 7 8, on right: 1 2
keyval (21)
    on left: 9, on right: 3 15
keygroup (22)
    on left: 11, on right: 4 16
$@1 (23)
    on left: 10, on right: 11
keylist (24)
    on left: 12 13, on right: 11 12
keylist_item (25)
    on left: 14 15 16 17 18 19, on right: 12 13
preedit (26)
    on left: 22, on right: 14
$@2 (27)
    on left: 20, on right: 22
$@3 (28)
    on left: 21, on right: 22
declaration (29)
    on left: 25 27 30, on right: 7
$@4 (30)
    on left: 23, on right: 25
$@5 (31)
    on left: 24, on right: 25
$@6 (32)
    on left: 26, on right: 27
$@7 (33)
    on left: 28, on right: 30
$@8 (34)
    on left: 29, on right: 30
optionalcolon (35)
    on left: 31 32 33, on right: 25 27 30 32
optionalweight (36)
    on left: 34 35, on right: 25 27 30
numlist (37)
    on left: 36 37 38, on right: 25 30 37 38
num_item (38)
    on left: 39 40 41 42 43 44, on right: 36 37
blob (39)
    on left: 45 46 47, on right: 9 11 19 22 45
blob_elmt (40)
    on left: 48 49 50 51 52 53 54, on right: 45 46


State 0

    0 $accept: . list $end

    error   shift, and go to state 1
    SPACE   shift, and go to state 2
    NUMBER  shift, and go to state 3
    DTEXT   shift, and go to state 4
    EOL     shift, and go to state 5
    TEXT    shift, and go to state 6
    ','     shift, and go to state 7
    '$'     shift, and go to state 8
    '-'     shift, and go to state 9
    '*'     shift, and go to state 10

    list         go to state 11
    item         go to state 12
    keyval       go to state 13
    keygroup     go to state 14
    declaration  go to state 15
    blob         go to state 16
    blob_elmt    go to state 17


State 1

    8 item: error .
   47 blob: error .

    SPACE     reduce using rule 8 (item)
    SPACE     [reduce using rule 47 (blob)]
    NUMBER    reduce using rule 8 (item)
    NUMBER    [reduce using rule 47 (blob)]
    TEXT      reduce using rule 8 (item)
    TEXT      [reduce using rule 47 (blob)]
    ','       reduce using rule 8 (item)
    ','       [reduce using rule 47 (blob)]
    ':'       reduce using rule 47 (blob)
    OPENKEY   reduce using rule 47 (blob)
    '$'       reduce using rule 8 (item)
    '$'       [reduce using rule 47 (blob)]
    '-'       reduce using rule 8 (item)
    '-'       [reduce using rule 47 (blob)]
    '*'       reduce using rule 8 (item)
    '*'       [reduce using rule 47 (blob)]
    $default  reduce using rule 8 (item)


State 2

    6 item: SPACE .
   54 blob_elmt: SPACE .

    SPACE     reduce using rule 6 (item)
    SPACE     [reduce using rule 54 (blob_elmt)]
    NUMBER    reduce using rule 6 (item)
    NUMBER    [reduce using rule 54 (blob_elmt)]
    TEXT      reduce using rule 6 (item)
    TEXT      [reduce using rule 54 (blob_elmt)]
    ','       reduce using rule 6 (item)
    ','       [reduce using rule 54 (blob_elmt)]
    ':'       reduce using rule 54 (blob_elmt)
    OPENKEY   reduce using rule 54 (blob_elmt)
    '$'       reduce using rule 6 (item)
    '$'       [reduce using rule 54 (blob_elmt)]
    '-'       reduce using rule 6 (item)
    '-'       [reduce using rule 54 (blob_elmt)]
    '*'       reduce using rule 6 (item)
    '*'       [reduce using rule 54 (blob_elmt)]
    $default  reduce using rule 6 (item)


State 3

   49 blob_elmt: NUMBER .

    $default  reduce using rule 49 (blob_elmt)


State 4

   25 declaration: DTEXT . optionalcolon optionalweight TYPE $@4 numlist $@5 EOL
   27            | DTEXT . optionalcolon optionalweight TYPE $@6 EOL
   30            | DTEXT . optionalcolon optionalweight $@7 numlist $@8 EOL

    ':'  shift, and go to state 18

    $default  reduce using rule 33 (optionalcolon)

    optionalcolon  go to state 19


State 5

    5 item: EOL .

    $default  reduce using rule 5 (item)


State 6

   48 blob_elmt: TEXT .

    $default  reduce using rule 48 (blob_elmt)


State 7

   50 blob_elmt: ',' .

    $default  reduce using rule 50 (blob_elmt)


State 8

   53 blob_elmt: '$' .

    $default  reduce using rule 53 (blob_elmt)


State 9

   52 blob_elmt: '-' .

    $default  reduce using rule 52 (blob_elmt)


State 10

   51 blob_elmt: '*' .

    $default  reduce using rule 51 (blob_elmt)


State 11

    0 $accept: list . $end
    1 list: list . item

    $end    shift, and go to state 20
    error   shift, and go to state 1
    SPACE   shift, and go to state 2
    NUMBER  shift, and go to state 3
    DTEXT   shift, and go to state 4
    EOL     shift, and go to state 5
    TEXT    shift, and go to state 6
    ','     shift, and go to state 7
    '$'     shift, and go to state 8
    '-'     shift, and go to state 9
    '*'     shift, and go to state 10

    item         go to state 21
    keyval       go to state 13
    keygroup     go to state 14
    declaration  go to state 15
    blob         go to state 16
    blob_elmt    go to state 17


State 12

    2 list: item .

    $default  reduce using rule 2 (list)


State 13

    3 item: keyval .

    $default  reduce using rule 3 (item)


State 14

    4 item: keygroup .

    $default  reduce using rule 4 (item)


State 15

    7 item: declaration .

    $default  reduce using rule 7 (item)


State 16

    9 keyval: blob . ':' blob
   11 keygroup: blob . OPENKEY $@1 keylist CLOSEKEY
   45 blob: blob . blob_elmt

    SPACE    shift, and go to state 22
    NUMBER   shift, and go to state 3
    TEXT     shift, and go to state 6
    ','      shift, and go to state 7
    ':'      shift, and go to state 23
    OPENKEY  shift, and go to state 24
    '$'      shift, and go to state 8
    '-'      shift, and go to state 9
    '*'      shift, and go to state 10

    blob_elmt  go to state 25


State 17

   46 blob: blob_elmt .

    $default  reduce using rule 46 (blob)


State 18

   31 optionalcolon: ':' .

    $default  reduce using rule 31 (optionalcolon)


State 19

   25 declaration: DTEXT optionalcolon . optionalweight TYPE $@4 numlist $@5 EOL
   27            | DTEXT optionalcolon . optionalweight TYPE $@6 EOL
   30            | DTEXT optionalcolon . optionalweight $@7 numlist $@8 EOL
   32 optionalcolon: optionalcolon . SPACE

    SPACE   shift, and go to state 26
    WEIGHT  shift, and go to state 27

    $default  reduce using rule 35 (optionalweight)

    optionalweight  go to state 28


State 20

    0 $accept: list $end .

    $default  accept


State 21

    1 list: list item .

    $default  reduce using rule 1 (list)


State 22

   54 blob_elmt: SPACE .

    $default  reduce using rule 54 (blob_elmt)


State 23

    9 keyval: blob ':' . blob

    error   shift, and go to state 29
    SPACE   shift, and go to state 22
    NUMBER  shift, and go to state 3
    TEXT    shift, and go to state 6
    ','     shift, and go to state 7
    '$'     shift, and go to state 8
    '-'     shift, and go to state 9
    '*'     shift, and go to state 10

    blob       go to state 30
    blob_elmt  go to state 17


State 24

   11 keygroup: blob OPENKEY . $@1 keylist CLOSEKEY

    $default  reduce using rule 10 ($@1)

    $@1  go to state 31


State 25

   45 blob: blob blob_elmt .

    $default  reduce using rule 45 (blob)


State 26

   32 optionalcolon: optionalcolon SPACE .

    $default  reduce using rule 32 (optionalcolon)


State 27

   34 optionalweight: WEIGHT .

    $default  reduce using rule 34 (optionalweight)


State 28

   25 declaration: DTEXT optionalcolon optionalweight . TYPE $@4 numlist $@5 EOL
   27            | DTEXT optionalcolon optionalweight . TYPE $@6 EOL
   30            | DTEXT optionalcolon optionalweight . $@7 numlist $@8 EOL

    TYPE  shift, and go to state 32

    $default  reduce using rule 28 ($@7)

    $@7  go to state 33


State 29

   47 blob: error .

    $default  reduce using rule 47 (blob)


State 30

    9 keyval: blob ':' blob .
   45 blob: blob . blob_elmt

    SPACE   shift, and go to state 22
    NUMBER  shift, and go to state 3
    TEXT    shift, and go to state 6
    ','     shift, and go to state 7
    '$'     shift, and go to state 8
    '-'     shift, and go to state 9
    '*'     shift, and go to state 10

    SPACE     [reduce using rule 9 (keyval)]
    NUMBER    [reduce using rule 9 (keyval)]
    TEXT      [reduce using rule 9 (keyval)]
    ','       [reduce using rule 9 (keyval)]
    '$'       [reduce using rule 9 (keyval)]
    '-'       [reduce using rule 9 (keyval)]
    '*'       [reduce using rule 9 (keyval)]
    $default  reduce using rule 9 (keyval)

    blob_elmt  go to state 25


State 31

   11 keygroup: blob OPENKEY $@1 . keylist CLOSEKEY

    error   shift, and go to state 34
    SPACE   shift, and go to state 22
    NUMBER  shift, and go to state 3
    EOL     shift, and go to state 35
    TEXT    shift, and go to state 6
    ','     shift, and go to state 7
    '$'     shift, and go to state 8
    '-'     shift, and go to state 9
    '*'     shift, and go to state 10

    keyval        go to state 36
    keygroup      go to state 37
    keylist       go to state 38
    keylist_item  go to state 39
    preedit       go to state 40
    blob          go to state 41
    blob_elmt     go to state 17


State 32

   25 declaration: DTEXT optionalcolon optionalweight TYPE . $@4 numlist $@5 EOL
   27            | DTEXT optionalcolon optionalweight TYPE . $@6 EOL

    EOL       reduce using rule 26 ($@6)
    $default  reduce using rule 23 ($@4)

    $@4  go to state 42
    $@6  go to state 43


State 33

   30 declaration: DTEXT optionalcolon optionalweight $@7 . numlist $@8 EOL

    error   shift, and go to state 44
    NUMBER  shift, and go to state 45
    DTEXT   shift, and go to state 46
    '$'     shift, and go to state 47
    '*'     shift, and go to state 48

    numlist   go to state 49
    num_item  go to state 50


State 34

   18 keylist_item: error .
   47 blob: error .

    error     reduce using rule 18 (keylist_item)
    error     [reduce using rule 47 (blob)]
    SPACE     reduce using rule 18 (keylist_item)
    SPACE     [reduce using rule 47 (blob)]
    NUMBER    reduce using rule 18 (keylist_item)
    NUMBER    [reduce using rule 47 (blob)]
    THEN      reduce using rule 47 (blob)
    EOL       reduce using rule 18 (keylist_item)
    EOL       [reduce using rule 47 (blob)]
    TEXT      reduce using rule 18 (keylist_item)
    TEXT      [reduce using rule 47 (blob)]
    ','       reduce using rule 18 (keylist_item)
    ','       [reduce using rule 47 (blob)]
    ':'       reduce using rule 47 (blob)
    OPENKEY   reduce using rule 47 (blob)
    CLOSEKEY  reduce using rule 18 (keylist_item)
    CLOSEKEY  [reduce using rule 47 (blob)]
    '$'       reduce using rule 18 (keylist_item)
    '$'       [reduce using rule 47 (blob)]
    '-'       reduce using rule 18 (keylist_item)
    '-'       [reduce using rule 47 (blob)]
    '*'       reduce using rule 18 (keylist_item)
    '*'       [reduce using rule 47 (blob)]
    $default  reduce using rule 18 (keylist_item)


State 35

   17 keylist_item: EOL .

    $default  reduce using rule 17 (keylist_item)


State 36

   15 keylist_item: keyval .

    $default  reduce using rule 15 (keylist_item)


State 37

   16 keylist_item: keygroup .

    $default  reduce using rule 16 (keylist_item)


State 38

   11 keygroup: blob OPENKEY $@1 keylist . CLOSEKEY
   12 keylist: keylist . keylist_item

    error     shift, and go to state 34
    SPACE     shift, and go to state 22
    NUMBER    shift, and go to state 3
    EOL       shift, and go to state 35
    TEXT      shift, and go to state 6
    ','       shift, and go to state 7
    CLOSEKEY  shift, and go to state 51
    '$'       shift, and go to state 8
    '-'       shift, and go to state 9
    '*'       shift, and go to state 10

    keyval        go to state 36
    keygroup      go to state 37
    keylist_item  go to state 52
    preedit       go to state 40
    blob          go to state 41
    blob_elmt     go to state 17


State 39

   13 keylist: keylist_item .

    $default  reduce using rule 13 (keylist)


State 40

   14 keylist_item: preedit .

    $default  reduce using rule 14 (keylist_item)


State 41

    9 keyval: blob . ':' blob
   11 keygroup: blob . OPENKEY $@1 keylist CLOSEKEY
   19 keylist_item: blob .
   22 preedit: blob . $@2 THEN blob $@3 EOL
   45 blob: blob . blob_elmt

    SPACE    shift, and go to state 22
    NUMBER   shift, and go to state 3
    TEXT     shift, and go to state 6
    ','      shift, and go to state 7
    ':'      shift, and go to state 23
    OPENKEY  shift, and go to state 24
    '$'      shift, and go to state 8
    '-'      shift, and go to state 9
    '*'      shift, and go to state 10

    SPACE     [reduce using rule 19 (keylist_item)]
    NUMBER    [reduce using rule 19 (keylist_item)]
    THEN      reduce using rule 20 ($@2)
    TEXT      [reduce using rule 19 (keylist_item)]
    ','       [reduce using rule 19 (keylist_item)]
    '$'       [reduce using rule 19 (keylist_item)]
    '-'       [reduce using rule 19 (keylist_item)]
    '*'       [reduce using rule 19 (keylist_item)]
    $default  reduce using rule 19 (keylist_item)

    $@2        go to state 53
    blob_elmt  go to state 25


State 42

   25 declaration: DTEXT optionalcolon optionalweight TYPE $@4 . numlist $@5 EOL

    error   shift, and go to state 44
    NUMBER  shift, and go to state 45
    DTEXT   shift, and go to state 46
    '$'     shift, and go to state 47
    '*'     shift, and go to state 48

    numlist   go to state 54
    num_item  go to state 50


State 43

   27 declaration: DTEXT optionalcolon optionalweight TYPE $@6 . EOL

    EOL  shift, and go to state 55


State 44

   44 num_item: error .

    $default  reduce using rule 44 (num_item)


State 45

   39 num_item: NUMBER . '-' NUMBER
   40         | NUMBER .

    '-'  shift, and go to state 56

    $default  reduce using rule 40 (num_item)


State 46

   41 num_item: DTEXT .

    $default  reduce using rule 41 (num_item)


State 47

   43 num_item: '$' . NUMBER

    NUMBER  shift, and go to state 57


State 48

   42 num_item: '*' .

    $default  reduce using rule 42 (num_item)


State 49

   30 declaration: DTEXT optionalcolon optionalweight $@7 numlist . $@8 EOL
   37 numlist: numlist . ',' num_item
   38        | numlist . SPACE

    SPACE  shift, and go to state 58
    ','    shift, and go to state 59

    $default  reduce using rule 29 ($@8)

    $@8  go to state 60


State 50

   36 numlist: num_item .

    $default  reduce using rule 36 (numlist)


State 51

   11 keygroup: blob OPENKEY $@1 keylist CLOSEKEY .

    $default  reduce using rule 11 (keygroup)


State 52

   12 keylist: keylist keylist_item .

    $default  reduce using rule 12 (keylist)


State 53

   22 preedit: blob $@2 . THEN blob $@3 EOL

    THEN  shift, and go to state 61


State 54

   25 declaration: DTEXT optionalcolon optionalweight TYPE $@4 numlist . $@5 EOL
   37 numlist: numlist . ',' num_item
   38        | numlist . SPACE

    SPACE  shift, and go to state 58
    ','    shift, and go to state 59

    $default  reduce using rule 24 ($@5)

    $@5  go to state 62


State 55

   27 declaration: DTEXT optionalcolon optionalweight TYPE $@6 EOL .

    $default  reduce using rule 27 (declaration)


State 56

   39 num_item: NUMBER '-' . NUMBER

    NUMBER  shift, and go to state 63


State 57

   43 num_item: '$' NUMBER .

    $default  reduce using rule 43 (num_item)


State 58

   38 numlist: numlist SPACE .

    $default  reduce using rule 38 (numlist)


State 59

   37 numlist: numlist ',' . num_item

    error   shift, and go to state 44
    NUMBER  shift, and go to state 45
    DTEXT   shift, and go to state 46
    '$'     shift, and go to state 47
    '*'     shift, and go to state 48

    num_item  go to state 64


State 60

   30 declaration: DTEXT optionalcolon optionalweight $@7 numlist $@8 . EOL

    EOL  shift, and go to state 65


State 61

   22 preedit: blob $@2 THEN . blob $@3 EOL

    error   shift, and go to state 29
    SPACE   shift, and go to state 22
    NUMBER  shift, and go to state 3
    TEXT    shift, and go to state 6
    ','     shift, and go to state 7
    '$'     shift, and go to state 8
    '-'     shift, and go to state 9
    '*'     shift, and go to state 10

    blob       go to state 66
    blob_elmt  go to state 17


State 62

   25 declaration: DTEXT optionalcolon optionalweight TYPE $@4 numlist $@5 . EOL

    EOL  shift, and go to state 67


State 63

   39 num_item: NUMBER '-' NUMBER .

    $default  reduce using rule 39 (num_item)


State 64

   37 numlist: numlist ',' num_item .

    $default  reduce using rule 37 (numlist)


State 65

   30 declaration: DTEXT optionalcolon optionalweight $@7 numlist $@8 EOL .

    $default  reduce using rule 30 (declaration)


State 66

   22 preedit: blob $@2 THEN blob . $@3 EOL
   45 blob: blob . blob_elmt

    SPACE   shift, and go to state 22
    NUMBER  shift, and go to state 3
    TEXT    shift, and go to state 6
    ','     shift, and go to state 7
    '$'     shift, and go to state 8
    '-'     shift, and go to state 9
    '*'     shift, and go to state 10

    $default  reduce using rule 21 ($@3)

    $@3        go to state 68
    blob_elmt  go to state 25


State 67

   25 declaration: DTEXT optionalcolon optionalweight TYPE $@4 numlist $@5 EOL .

    $default  reduce using rule 25 (declaration)


State 68

   22 preedit: blob $@2 THEN blob $@3 . EOL

    EOL  shift, and go to state 69


State 69

   22 preedit: blob $@2 THEN blob $@3 EOL .

    $default  reduce using rule 22 (preedit)
